# skeletons

./: .editorconfig  README.md  manifest.json  skeletons-manifest.schema.json
flake/: flake.nix
flake-esp32-rust/: .gitignore  Cargo.toml  flake.nix  nvfetcher.toml  sdkconfig.defaults
flake-esp32-rust/.cargo/: config.toml
flake-esp32-rust/src/: main.rs
flake-public/: .gitignore  default.nix  flake.nix  treefmt.nix
